@@ -5898,7 +5898,17 @@ rb_big_hash(VALUE x)
 }
 
 /*
- * MISSING: documentation
+ * call-seq:
+ *   big.coerce(numeric)  ->  array
+ *
+ * Returns an array with both a +numeric+ and a +big+ represented as Bignum
+ * objects.
+ *
+ * This is achieved by converting +numeric+ to a Bignum.
+ *
+ * A TypeError is raised if the +numeric+ is not a Fixnum or Bignum type.
+ *
+ *     (0x3FFFFFFFFFFFFFFF+1).coerce(42)   #=> [42, 4611686018427387904]
  */
 
 static VALUE
